--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,10 +62,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Camera\CameraController.cs" />
+    <Compile Include="Assets\Platforms\Hazard.cs" />
     <Compile Include="Assets\Platforms\Segment.cs" />
     <Compile Include="Assets\Platforms\SegmentSpawner.cs" />
     <Compile Include="Assets\Player\DeathManager.cs" />
     <Compile Include="Assets\Player\PlayerController.cs" />
+    <Compile Include="Assets\ScoreManager.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>D:/Programs/Save Files/Unity/Project B/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
