--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,8 +61,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Audio\AudioManager.cs" />
     <Compile Include="Assets\Camera\CameraController.cs" />
     <Compile Include="Assets\Menu\MenuManager.cs" />
+    <Compile Include="Assets\Menu\PlayerPrefsManager.cs" />
     <Compile Include="Assets\Misc\Shredder\Shredder.cs" />
     <Compile Include="Assets\Platforms\Prefabs\Hazards\Hazard.cs" />
     <Compile Include="Assets\Platforms\Segment.cs" />
