Added cloud generation.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,8 @@
     <Compile Include="Assets\Audio\AudioManager.cs" />
     <Compile Include="Assets\Audio\SFX.cs" />
     <Compile Include="Assets\Background\BackgroundManager.cs" />
+    <Compile Include="Assets\Background\Cloud.cs" />
+    <Compile Include="Assets\Background\CloudManager.cs" />
     <Compile Include="Assets\Camera\CameraController.cs" />
     <Compile Include="Assets\Menu\MenuManager.cs" />
     <Compile Include="Assets\Menu\PlayerPrefsManager.cs" />
